<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.seaway.guideassistant.bean.WeatherResponse" />
        <variable
            name="user"
            type="com.seaway.guideassistant.bean.UserBean" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bg"
        tools:context=".MainActivity">


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View style="@style/h_line"
            android:background="@color/color_border" />
        <com.google.android.material.tabs.TabLayout
            app:tabIndicatorHeight="0dp"
            android:background="@color/color_surface"
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56">
            <com.google.android.material.tabs.TabItem
                android:text="@string/tab_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                android:text="@string/tab_navigate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                android:text="@string/tab_agent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                android:text="@string/tab_obstacle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                android:text="@string/tab_devices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.tabs.TabLayout>


    </LinearLayout>
</layout>