<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/robot_host_label"
        android:textColor="@color/color_text_muted"
        android:textSize="@dimen/sp_13" />

    <EditText
        android:id="@+id/et_robot_host"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/dp_6"
        android:autofillHints=""
        android:background="@drawable/bg_input_field"
        android:hint="@string/robot_host_hint"
        android:inputType="textUri"
        android:paddingHorizontal="@dimen/dp_14"
        android:textColor="@color/color_text"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:text="@string/robot_port_label"
        android:textColor="@color/color_text_muted"
        android:textSize="@dimen/sp_13" />

    <EditText
        android:id="@+id/et_robot_port"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/dp_6"
        android:autofillHints=""
        android:background="@drawable/bg_input_field"
        android:hint="@string/robot_port_hint"
        android:inputType="number"
        android:maxLength="5"
        android:paddingHorizontal="@dimen/dp_14"
        android:textColor="@color/color_text"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tv_robot_connect_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/color_text_muted"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/btn_robot_connect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/bg_btn_primary"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/robot_btn_connect"
        android:textColor="@color/color_bg"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold" />

</merge>
